# melcdl-backend

./: .dockerignore  .gitignore  Makefile  README.md  main.py  pyproject.toml
cli/app/: __main__.py
cli/migrate/: __main__.py
cmd/app/: __main__.py
config/: .env.local  logging.json
deployment/: docker-compose.local.yaml  docker-compose.prod.yaml
docker/: Dockerfile.local  Dockerfile.prod
docs/: er.puml
internal/api/: __init__.py  common.py
internal/api/kafka/: __init__.py  melanoma.py
internal/api/v1/: __init__.py  auth.py  ml.py  predict.py
internal/api/v1/ml/: __init__.py  models.py  tasks.py
internal/bootstrap/: abc.py  app.py  migrate.py
internal/client/: __init__.py
internal/client/kafka/: __init__.py  consumer.py  producer.py
internal/config/: __init__.py  base.py  kafka.py  models.py  s3.py
internal/entities/models/: __init__.py  base.py  ml.py  user.py
internal/entities/schemas/: __init__.py  base.py  fields.py  ml.py  user.py
internal/repositories/: __init__.py  base.py  ml.py  user.py
internal/services/: crypto.py  ml.py  user.py  utime.py
internal/services/ml/: base.py  model.py
internal/utils/: auth.py  cosine_classifier.py  crypto.py  helper.py  log.py  ml.py  resnet_abcd_swin.py  routers.py
internal/utils/errors/: __init__.py  handlers.py  types.py
migrations/: env.py
migrations/versions/: 0638f97525bb_feat_add_user_model.py  327100d5b326_feat_add_predict_table.py  3fa99d7262b3_update_add_columnt_to_models_is_exists.py  5320e215ee66_feat_add_user_model.py  55f06c12e1a3_init_db.py  73310364c832_feat_add_files_and_ml_table.py  905d8bb157d4_feat_add_user_model.py  b2667b3dfc7b_feat_add_tasks_model.py  dea0a82af034_fix_files_fk.py  e39acba5c693_update_naming.py  fe7f16435759_update_change_to_default_message.py
scripts/: benchmark.sh  init_db_test.sh  start.sh  test.sh
tests/: conftest.py  test_db.py
tests/api/: test_common.py
tests/api/v1/: test_auth.py  test_ml.py
